[feature] mcp-linux-agent get url encode