@@ -63,7 +63,8 @@ public class MouseClick implements McpTool {
                 // 可以选择检查 moveMouseResponse 的状态码
             }
 
-            HttpGet clickRequest = new HttpGet(linuxServerUrl + "/mouse_click?object_description=" + objectDescription);
+            String encodedObjectDescription = java.net.URLEncoder.encode(objectDescription, "UTF-8");
+            HttpGet clickRequest = new HttpGet(linuxServerUrl + "/mouse_click?object_description=" + encodedObjectDescription);
             try (CloseableHttpResponse clickResponse = httpClient.execute(clickRequest)) {
                 HttpEntity entity = clickResponse.getEntity();
                 if (clickResponse.getStatusLine().getStatusCode() != 200) {
@@ -78,7 +79,7 @@ public class MouseClick implements McpTool {
             }
         } catch (IOException e) {
             log.error("Error in mouseClick", e);
-            return new McpSchema.CallToolResult(List.of(new McpSchema.TextContent("Error in mouseClick: " + e.getMessage())), true);
+            return new McpSchema.CallToolResult(java.util.Arrays.asList(new McpSchema.TextContent("Error in mouseClick: " + e.getMessage())), true);
         }
     }
 }
